@@ -1,3 +1,8 @@
+2003-06-20  Doug Gregor <dgregor@apple.com>
+
+        * include/bits/boost_concept_check.h: Don't use _D or _R for type 
+        names.
+
 2003-06-22  Paolo Carlini  <pcarlini@unitus.it>
 	    Nathan C. Myers  <ncm-nospam@cantrip.org>
 
